--- a/overlay/packages/apps/CarrierConfig/res/xml/vendor_miui.xml
+++ b/overlay/packages/apps/CarrierConfig/res/xml/vendor_miui.xml
@@ -6,8 +6,15 @@
         <boolean name="config_enable_vt_with_mobile_data_off" value="true" />
         <boolean name="ignore_data_enabled_changed_for_video_calls" value="true" />
         <boolean name="carrier_wfc_ims_available_bool" value="false" />
+        <boolean name="allow_adding_apns_bool" value="true" />
+        <string-array name="read_only_apn_types_string_array" num="0" />
         <int name="carrier_default_wfc_ims_mode_int" value="1" />
+        <int name="carrier_default_wfc_ims_roaming_mode_int" value="1" />
         <boolean name="carrier_5g_switch_available_bool" value="false" />
+        <map name="apn_default_values_strings_array">
+            <string name="protocol">IPV4V6</string>
+            <string name="roaming_protocol">IPV4V6</string>
+        </map>
     </carrier_config>
     <carrier_config sdk="26">
         <boolean name="vilte_data_is_metered_bool" value="false" />
@@ -101,6 +108,9 @@
         <boolean name="voicemail_notification_persistent_bool" value="true" />
         <boolean name="carrier_5g_switch_available_bool" value="true" />
     </carrier_config>
+    <carrier_config mcc="262" mnc="01">
+        <boolean name="carrier_5g_switch_available_bool" value="true" />
+    </carrier_config>
     <carrier_config mcc="268" mnc="01">
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
         <boolean name="voicemail_notification_persistent_bool" value="true" />
@@ -174,8 +184,14 @@
     <carrier_config mcc="214" mnc="01">
         <boolean name="config_support_callbarring_over_ims" value="false" />
     </carrier_config>
+    <carrier_config mcc="226" mnc="05">
+        <boolean name="carrier_5g_switch_available_bool" value="true" />
+    </carrier_config>
     <carrier_config mcc="222" mnc="10">
         <boolean name="config_support_callbarring_over_ims" value="false" />
+    </carrier_config>
+    <carrier_config mcc="234" mnc="10">
+        <boolean name="carrier_5g_switch_available_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="234" mnc="15">
         <boolean name="config_support_callbarring_over_ims" value="false" />
@@ -188,5 +204,106 @@
     </carrier_config>
     <carrier_config mcc="222" mnc="01">
         <boolean name="config_support_callbarring_over_ims" value="false" />
+    </carrier_config>
+    <carrier_config mcc="232" mnc="03">
+        <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
+        <boolean name="editable_wfc_roaming_mode_bool" value="true" />
+        <string name="default_vm_number_string">+436762200</string>
+        <boolean name="show_ims_registration_status_bool" value="true" />
+        <int name="wfc_spn_format_idx_int" value="1" />
+        <boolean name="is_ims_conference_size_enforced_bool" value="true" />
+        <int name="ims_conference_size_limit_int" value="6" />
+    </carrier_config>
+    <carrier_config mcc="232" mnc="07">
+        <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
+        <boolean name="editable_wfc_roaming_mode_bool" value="true" />
+        <string name="default_vm_number_string">+4365011000</string>
+        <boolean name="show_ims_registration_status_bool" value="true" />
+        <int name="wfc_spn_format_idx_int" value="1" />
+        <boolean name="is_ims_conference_size_enforced_bool" value="true" />
+        <int name="ims_conference_size_limit_int" value="6" />
+    </carrier_config>
+    <carrier_config mcc="230" mnc="01">
+        <int name="carrier_default_wfc_ims_mode_int" value="2" />
+        <string name="default_vm_number_string">+420603123311</string>
+        <boolean name="show_ims_registration_status_bool" value="true" />
+        <int name="wfc_spn_format_idx_int" value="1" />
+        <boolean name="is_ims_conference_size_enforced_bool" value="true" />
+        <int name="ims_conference_size_limit_int" value="6" />
+    </carrier_config>
+    <carrier_config mcc="262" mnc="01">>
+<boolean name="editable_wfc_mode_bool" value="false" />
+        <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
+        <int name="carrier_default_wfc_ims_roaming_mode_int" value="2" />
+        <string name="default_vm_number_string">3311</string>
+        <boolean name="show_ims_registration_status_bool" value="true" />
+        <int name="wfc_spn_format_idx_int" value="1" />
+        <boolean name="is_ims_conference_size_enforced_bool" value="true" />
+        <int name="ims_conference_size_limit_int" value="6" />
+        <map name="apn_default_values_strings_array">
+            <string name="protocol">IPV4V6</string>
+            <string name="roaming_protocol">IP</string>
+        </map>
+    </carrier_config>
+    <carrier_config mcc="262" mnc="01" gid1="44">
+        <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
+        <boolean name="editable_wfc_mode_bool" value="false" />
+        <int name="carrier_default_wfc_ims_roaming_mode_int" value="2" />
+        <boolean name="hide_enhanced_4g_lte_bool" value="true" />
+        <boolean name="carrier_hide_wfc_bool" value="true" />
+        <string name="default_vm_number_string">3311</string>
+        <boolean name="show_ims_registration_status_bool" value="true" />
+        <int name="wfc_spn_format_idx_int" value="1" />
+        <boolean name="is_ims_conference_size_enforced_bool" value="true" />
+        <int name="ims_conference_size_limit_int" value="6" />
+        <map name="apn_default_values_strings_array">
+            <string name="protocol">IPV4V6</string>
+            <string name="roaming_protocol">IP</string>
+        </map>
+    </carrier_config>
+    <carrier_config mcc="202" mnc="01">
+        <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
+        <string name="default_vm_number_string">+306971000123</string>
+        <boolean name="show_ims_registration_status_bool" value="true" />
+        <int name="wfc_spn_format_idx_int" value="1" />
+        <boolean name="is_ims_conference_size_enforced_bool" value="true" />
+        <int name="ims_conference_size_limit_int" value="6" />
+    </carrier_config>
+    <carrier_config mcc="216" mnc="30">
+        <string name="default_vm_number_string">+36309888444</string>
+        <boolean name="show_ims_registration_status_bool" value="true" />
+        <int name="wfc_spn_format_idx_int" value="1" />
+        <boolean name="is_ims_conference_size_enforced_bool" value="true" />
+        <int name="ims_conference_size_limit_int" value="6" />
+    </carrier_config>
+    <carrier_config mcc="260" mnc="02">
+        <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
+        <int name="carrier_default_wfc_ims_mode_int" value="2" />
+        <boolean name="editable_wfc_roaming_mode_bool" value="true" />
+        <string name="default_vm_number_string">+48602950000</string>
+        <boolean name="show_ims_registration_status_bool" value="true" />
+        <int name="wfc_spn_format_idx_int" value="1" />
+        <boolean name="is_ims_conference_size_enforced_bool" value="true" />
+        <int name="ims_conference_size_limit_int" value="6" />
+    </carrier_config>
+    <carrier_config mcc="231" mnc="02">
+        <string name="default_vm_number_string">+421903333999</string>
+        <boolean name="show_ims_registration_status_bool" value="true" />
+        <boolean name="is_ims_conference_size_enforced_bool" value="true" />
+        <int name="ims_conference_size_limit_int" value="6" />
+    </carrier_config>
+    <carrier_config mcc="219" mnc="01">
+        <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
+        <int name="carrier_default_wfc_ims_mode_int" value="2" />
+        <boolean name="editable_wfc_roaming_mode_bool" value="true" />
+        <string name="default_vm_number_string">+38598151100</string>
+        <boolean name="show_ims_registration_status_bool" value="true" />
+        <int name="wfc_spn_format_idx_int" value="1" />
+        <boolean name="is_ims_conference_size_enforced_bool" value="true" />
+        <int name="ims_conference_size_limit_int" value="6" />
+    </carrier_config>
+    <carrier_config mcc="226" mnc="03,06">
+        <string name="default_vm_number_string">+40766177177</string>
+        <boolean name="show_ims_registration_status_bool" value="true" />
     </carrier_config>
 </carrier_config_list>
